main/sysfiles/etc/iptables/iptables.rules
# Generated by iptables-save v1.8.7 on Fri Feb 12 15:43:16 2021
*filter
:INPUT ACCEPT [1463:1489158]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1407:104365]
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8000 -j DROP
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j DROP
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 3000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3000 -j DROP
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 3001 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3001 -j DROP
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 3333 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3333 -j DROP
COMMIT
# Completed on Fri Feb 12 15:43:16 2021
